syntax = "proto3";

package model;

import "proto/model/ability.proto";
import "proto/model/enums.proto";
import "proto/model/location.proto";

option go_package = "github.com/user/repo/proto/model";

// TragedyCondition 定义悲剧发生的条件。
message TragedyCondition {
  TragedyType tragedy_type = 1;
  int32 day = 2;
  string culprit_id = 3;
  repeated Condition conditions = 4;
  TargetRuleType target_rule = 5;
  repeated Ability abilities = 6;
  bool is_active = 7;
  bool is_prevented = 8;
}

// Condition 定义悲剧的一个单一条件。
message Condition {
  string character_id = 1;
  LocationType location = 2;
  int32 min_paranoia = 3;
  bool is_alone = 4;
}
